--- a/HomeWork from 11.07.2023/HomeWork from 11.07.2023.vcxproj.filters
+++ b/HomeWork from 11.07.2023/HomeWork from 11.07.2023.vcxproj.filters
@@ -15,22 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="полиморфизм HW_24_оркестр\Orkestr.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="полиморфизм HW_24_оркестр\полиморфизм HW_24_оркестр.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="полиморфизм HW_24_оркестр\Orkestr.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <ResourceCompile Include="HomeWork from 11.07.2023.rc">
       <Filter>Файлы ресурсов</Filter>
     </ResourceCompile>
@@ -54,5 +38,10 @@
     <Media Include="полиморфизм HW_24_оркестр\truba.wav">
       <Filter>Файлы ресурсов</Filter>
     </Media>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="STL, MAP, Multimap_ HW_25_country\STL, MAP, Multimap_ HW_25_country.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
